# Transmitter

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  build_arduino_msgs.sh  fix.sh  package.xml  platformio.ini  readme.txt
communication_firmware/central_firmware/: central_firmware.ino
communication_firmware/firmware/: firmware.ino  firmware.ino_old
communication_firmware/firmware/radio_pipe/: radio_pipe.ino
communication_firmware/lcd_module_firmware/: lcd_module_firmware.ino
control/: position_control.py
dummy_publisher/: dummy_pub.py
joystick/: joystick.py
launch/: run_communication.launch  run_communication.launch~  run_joystick.launch
msg/: VisionMessage.msg  comm_msg.msg  joy_msg.msg  robot_speed_msg.msg  robots_speeds_msg.msg  target_positions_msg.msg  trajectory.msg  wheels_speeds_msg.msg
src/: PIDTwidleTuner.py  Twiddle.py  config.hpp  controller.py  deadzoneEstimator.py  identificator.py  main.cpp  nodetest.cpp  radioSerial.py  regression.py  serialReader.py  test.py
